--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 SERVER_PORT = 5000
 SERVER_HOST = "localhost"
-SERVER_USER = "phacf"
-SERVER_PASSWORD = "124578"
+
+DATABASE_USER = "phacf"
+DATABASE_PASSWORD = "Phacf124578!"
+DATABASE_NAME = "sistema_de_cadastro"
+DATABASE_DIALECT = "mysql"
+DATABASE_HOST = "localhost"
