--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@types/express": "^4.17.12",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.2",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.5",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
