--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/body-parser": "^1.19.1",
     "@types/express": "^4.17.12",
+    "@types/express-handlebars": "^5.3.1",
+    "@types/node": "^16.3.2",
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.5",
     "typescript": "^4.3.5"
