criando models users

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ SERVER_HOST = "localhost"
 
 DATABASE_USER = "phacf"
 DATABASE_PASSWORD = "Phacf124578!"
-DATABASE_NAME = "sistema_de_cadastro"
+DATABASE_NAME = "postapp"
 DATABASE_DIALECT = "mysql"
 DATABASE_HOST = "localhost"
